# bedrock-render

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: publish.yml
benches/: render.rs
data/colors/: bedrock-biome-color.json  bedrock-block-color.json  bedrock-colors.brpal  bedrock-resource-pack-aliases.json
docs/: API.md  BENCHMARKS.md  PALETTE_SOURCES.md  TESTING.md
examples/: palette_tool.rs  render_preview.rs  render_streaming_session.rs  render_web_map.rs
examples/common/: mod.rs
examples/web_map_assets/: plugin-runtime.js  viewer.css  viewer.html  viewer.js
src/: bedrock_render.rs  editor.rs  error.rs  palette.rs  renderer.rs
src/palette/: import.rs
src/renderer/: cache.rs  gpu.rs  pipeline.rs
tests/: fixture_render.rs  real_world_surface.rs
